added material ui for styling and temporary posts

--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
+    "@material-ui/core": "^4.11.4",
     "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
     "gatsby": "^3.6.2",
     "gatsby-plugin-google-fonts": "^1.0.1",
+    "gatsby-plugin-material-ui": "^3.0.1",
     "gatsby-plugin-mdx": "^2.6.0",
     "gatsby-plugin-sharp": "^3.6.0",
     "gatsby-remark-images": "^5.3.0",
