--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "develop": "gatsby develop",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
     "start": "npm run develop",
+    "deploy": "gatsby build --prefix-paths && gh-pages -d public",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
@@ -19,6 +20,7 @@
     "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
     "gatsby": "^3.6.2",
+    "gatsby-image": "^3.7.0",
     "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-material-ui": "^3.0.1",
     "gatsby-plugin-mdx": "^2.6.0",
@@ -26,10 +28,18 @@
     "gatsby-remark-images": "^5.3.0",
     "gatsby-source-filesystem": "^3.6.0",
     "gatsby-transformer-sharp": "^3.6.0",
+    "mdx-utils": "^0.2.0",
+    "prism-react-renderer": "^1.2.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
   },
   "devDependencies": {
+    "@iconify-icons/akar-icons": "^1.1.14",
+    "@iconify-icons/ant-design": "^1.1.0",
+    "@iconify-icons/bi": "^1.1.5",
+    "@iconify-icons/bytesize": "^1.1.0",
+    "@iconify/react": "^1.1.4",
+    "gh-pages": "^3.2.0",
     "prettier": "2.2.1"
   },
   "repository": {
