--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "mdx-utils": "^0.2.0",
     "prism-react-renderer": "^1.2.1",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "react-helmet": "^6.1.0"
   },
   "devDependencies": {
     "@iconify-icons/akar-icons": "^1.1.14",
