--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "gatsby-plugin-material-ui": "^3.0.1",
     "gatsby-plugin-mdx": "^2.6.0",
     "gatsby-plugin-sharp": "^3.6.0",
+    "gatsby-remark-autolink-headers": "^4.5.0",
     "gatsby-remark-images": "^5.3.0",
     "gatsby-source-filesystem": "^3.6.0",
     "gatsby-transformer-sharp": "^3.6.0",
