--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "gatsby-plugin-mdx": "^2.6.0",
     "gatsby-plugin-sharp": "^3.6.0",
     "gatsby-remark-autolink-headers": "^4.5.0",
+    "gatsby-remark-embed-video": "^3.1.1",
     "gatsby-remark-images": "^5.3.0",
+    "gatsby-remark-images-anywhere": "^1.3.1",
     "gatsby-source-filesystem": "^3.6.0",
     "gatsby-transformer-sharp": "^3.6.0",
     "mdx-utils": "^0.2.0",
