--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-material-ui": "^3.0.1",
     "gatsby-plugin-mdx": "^2.6.0",
+    "gatsby-plugin-react-helmet": "^4.9.0",
     "gatsby-plugin-sharp": "^3.6.0",
     "gatsby-remark-autolink-headers": "^4.5.0",
     "gatsby-remark-embed-video": "^3.1.1",
