--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "prism-react-renderer": "^1.2.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-helmet": "^6.1.0"
+    "react-helmet": "^6.1.0",
+    "react-masonry-css": "^1.0.16"
   },
   "devDependencies": {
     "@iconify-icons/akar-icons": "^1.1.14",
