--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@material-ui/core": "^4.11.4",
+    "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "*",
     "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
